# GenAi

./: pyproject.toml
notebooks/: 2_prompt_chains.ipynb  basic_langchain_with_openAi.ipynb
